<resources>
    <string name="app_name" translatable="false">Health Wave</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="health">Health</string>
    <string name="recipe">Recipes</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="no_quotes_found">No quotes found</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPwd">Forgot password?</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="yrName">Your name</string>
    <string name="yrEmail">Your email</string>
    <string name="yrPassword">Enter your password</string>
    <string name="confirmPassword">Confirm your password</string>
    <string name="submit">Submit</string>
    <string name="anAccount">You have an account ?</string>
    <string name="welcome">"Welcome to Health Wave !</string>
    <string name="sign_up">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="email_error">Please enter your email</string>
    <string name="password_errror">Please enter your password</string>
    <string name="confirm_password_error">Please confirm your password</string>
    <string name="passwords_matching_error">Passwords do not match</string>
    <string name="user_not_found_error">User not found</string>
    <string name="error_checking_user">Error checking user</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout">Log Out</string>
    <string name="profile_information">Profile Information</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="save">Save</string>
    <string name="app_logo">App Logo</string>
    <string name="what_are_your_thoughts_today">What are your thoughts today?</string>
    <string name="add_a_new_note">Add a new note</string>
    <string name="delete_note" />

    <string-array name="languages">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Chinese</item>
    </string-array>
    <string name="dark_mode">Dark mode</string>
    <string name="notification">Notifications</string>
    <string name="language">Language</string>

    <!-- Health strings -->

    <!-- Permissions & data policy-->
    <string name="privacy_policy_text">
        Your privacy is important to us. This app collects data from Health Connect
        to provide health-related insights. We collect only the data necessary for the app’s core
        functionalities, which include monitoring health metrics such as steps, heart rate and oxygen levels.
        The data is stored securely on your device,
        and we do not share it with third parties. By accepting this policy, you agree to allow the app to
        access Health Connect data as specified in the app’s permissions.
        You can revoke access at any time from the app settings.
    </string>
    <string name="permission_status_title">Permission status:</string>
    <string name="Permission_status_default">Unknown</string>
    <string name="info_icon">info icon</string>
    <string name="data_info">Learn more about how we handle your data.</string>
    <string name="read_data_policy">Read our data policy</string>

    <string name="health_connect_not_supported">Health Connect not available on this device</string>
    <string name="health_connect_not_installed">Health Connect is not installed</string>
    <string name="all_permissions_granted">All permissions granted</string>
    <string name="permissions_denied">Permissions denied</string>

    <!-- Error messages -->
    <string name="error_checking_availability">Error checking Health Connect availability: %1$s</string>
    <string name="error_checking_permissions">Error checking permissions: %1$s</string>
    <string name="error_loading_data">Error loading data: %1$s</string>
    <string name="no_steps_data">No steps data available</string>
    <string name="error_refreshing_data">Error refreshing data: %1$s</string>

    <!-- Health data -->
    <string name="steps_icon">Steps icon</string>
    <string name="steps">Steps</string>
    <string name="default_value">0</string>
    <string name="health_title">Health</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="heart_rate_label">BPM</string>
    <string name="oxygen_icon">Oxygen Icon</string>
    <string name="oxygen_level">Oxygen Level</string>
    <string name="oxygen_unit">%</string>
    <string name="hundred_percent">100%</string>
    <string name="body_composition_icon">body_composition_icon</string>
    <string name="body_composition">Body Composition</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="height_unit">cm</string>
    <string name="weight_unit">kg</string>
    <string name="edit_icon">edit icon</string>
    <string name="height_cm">Height (cm) :</string>
    <string name="weight_kg">Weight (kg) :</string>
    <string name="cm">cm</string>
    <string name="bmi_result">BMI Result</string>
    <string name="bmi_indicator">BMI indicator</string>
    <string name="Kilo">kg</string>
    <string name="about_bmi">About BMI</string>
    <string name="bmi_definition">Body Mass Index (BMI) is a simple measure that uses your height and weight to work out if your weight is healthy.</string>
    <string name="bmi_categories">BMI Categories:</string>
    <string name="underweight_info">Underweight: Less than 18.5</string>
    <string name="normal_weight_info">Normal weight: 18.5 to 24.9</string>
    <string name="overweight_info">Overweight: 25 to 29.9</string>
    <string name="obese_info">Obese: 30 or greater</string>
    <string name="bmi_disclaimer">Note: BMI is a general guide and may not be accurate for athletes, elderly people, or during pregnancy. Consult your healthcare provider for personalized advice.</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normal_weight">Normal weight</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obese">Obese</string>
    <string name="citation_yoga">Yoga teaches us to heal what needs to be healed and to let go of what cannot be healed</string>
    <string name="citation_activity">Sport is about surpassing oneself. Sport is a school of life</string>
    <string name="yoga">yoga</string>
    <string name="workout">Workout</string>
    <string name="cardio">Cardio</string>
    <string name="level3">Advance</string>
    <string name="level1">Beginner</string>
    <string name="top_actu">"  top news"</string>
    <string name="close">Close</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="tip_title">Tip of the day</string>
    <string name="no_tips_found">No tips found.</string>
    <string name="pen">pen</string>
</resources>
