<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/healthFragment"
        android:icon="@drawable/health_icon"
        android:title="@string/health" />
    <item
        android:id="@+id/activityFragment"
        android:icon="@drawable/activity_icon"
        android:title="@string/activity" />
    <item
        android:id="@+id/recipesFragment"
        android:icon="@drawable/apple_icon"
        android:title="@string/recipe" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/user_icon"
        android:title="@string/profile" />
</menu>