<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/body_composition_card"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        android:elevation="8dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/card_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Body composition Icon and Title -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/body_composition_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/body_composition_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/body_composition_icon"
                    android:src="@drawable/scale_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/body_composition_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_composition"
                    android:textColor="@color/body_purple"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/body_composition_icon"/>

                <ImageView
                    android:id="@+id/edit_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/edit_icon"
                    android:src="@drawable/edit_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Body Composition Data -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/body_composition_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/body_composition_layout">

                <TextView
                    android:id="@+id/height_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/height_data"
                    app:layout_constraintStart_toStartOf="@id/height_data"
                    app:layout_constraintEnd_toEndOf="@id/height_data" />

                <TextView
                    android:id="@+id/height_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toStartOf="@id/weight_data"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/height_label"
                    app:layout_constraintHorizontal_chainStyle="spread" />

                <TextView
                    android:id="@+id/height_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_unit"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    app:layout_constraintStart_toEndOf="@id/height_data"
                    app:layout_constraintBaseline_toBaselineOf="@id/height_data" />

                <TextView
                    android:id="@+id/weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/weight_data"
                    app:layout_constraintStart_toStartOf="@id/weight_data"
                    app:layout_constraintEnd_toEndOf="@id/weight_data" />

                <TextView
                    android:id="@+id/weight_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/height_data"
                    app:layout_constraintTop_toBottomOf="@id/weight_label" />

                <TextView
                    android:id="@+id/weight_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_unit"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    app:layout_constraintStart_toEndOf="@id/weight_data"
                    app:layout_constraintBaseline_toBaselineOf="@id/weight_data" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
